--- a/estilos/styles1.css
+++ b/estilos/styles1.css
@@ -1,9 +1,16 @@
+body {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-auto-rows: auto;
+}
+
 #titulo1 {
     font-size: 6rem;
     text-align: center;
     padding-top: 1rem;
     border: 0rem;
     margin: 0rem;
+    grid-column: span 6, 8 ;
 }
 
 #titulo2 {
@@ -20,9 +27,14 @@
     padding: 3rem;
     text-decoration: none;
     text-align: center;
-    background-color: aqua;
+    background-color:rgb(103, 12, 81);
+    grid-column: span 12;
 
 
+}
+
+#link {
+    color: rgb(224, 84, 0);
 }
 
 
@@ -30,4 +42,3 @@ body {
     background-color: peachpuff;
 }
 
-#logotipo {}
