--- a/estilos/styles1.css
+++ b/estilos/styles1.css
@@ -1,6 +1,6 @@
 body {
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: auto;
 }
 
@@ -42,3 +42,15 @@ body {
     background-color: peachpuff;
 }
 
+.enmedio {
+    text-align: center;
+}
+
+.left {
+    text-align: left;
+    padding-right: 100px;
+    border-left: 4px rgb(103, 12, 81) dotted;
+    padding-left: 30px;
+    padding-top: 30px;
+    margin: 30px;
+}
